--- a/mysite/blog/templates/index.html
+++ b/mysite/blog/templates/index.html
@@ -1,26 +1,47 @@
 {% extends "base.html" %}
-{% load i18n %}
+
 {% block content %}
-<section class="resume-section" id="about">
+<section class="resume-section" id="skills">
   <div class="resume-section-content">
-    <h1 class="mb-0">
-      Office
-        <span class="text-primary">Supplies</span>
-    </h1>
-    <div class="subheading mb-5">
-      Small neat things for your office
-    </div>
-    <div class="subheading mb-5">
-      3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-      <a href="mailto:name@email.com">name@email.com</a>
-    </div>
-    <p class="lead mb-5">Lots of stuff</p>
-    <div class="social-icons">
-        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
-    </div>
+    <h2 class="mb-5">Posts</h2>
+    <a href="new" class="btn btn-primary btn-lg" tabindex="-1" role="button" aria-disabled="true">New post</a>
+    {% if posts %}
+    <ul class="fa-ul mb-0">
+      {% for post in posts %}
+        <li class="mt-2">
+          <a href="{{ post.id }}"></a>Post {{post.post_title }}</a> by: {{ post.post_author }}, at {{ post.pub_time}}
+          {% if user.is_authenticated %}
+            <a href="{{ post.id }}/delete" class="btn btn-danger btn-sm" tabindex="-1" role="button" aria-disabled="true">Delete post</a>
+          {% endif %}
+        </li>
+      {% endfor %}
+    </ul>
+    <div class="pagination">
+      {% if posts.has_other_pages %}
+      <ul class="pagination">
+        {% if posts.has_previous %}
+          <li><a href="?page={{ posts.previous_page_number }}">&laquo;</a></li>
+        {% else %}
+          <li class="disabled"><span>&laquo;</span></li>
+        {% endif %}
+        {% for i in posts.paginator.page_range %}
+          {% if posts.number == i %}
+            <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+          {% else %}
+            <li><a href="?page={{ i }}">{{ i }}</a></li>
+          {% endif %}
+        {% endfor %}
+        {% if users.has_next %}
+          <li><a href="?page={{ posts.next_page_number }}">&raquo;</a></li>
+        {% else %}
+          <li class="disabled"><span>&raquo;</span></li>
+        {% endif %}
+      </ul>
+      {% endif %}
+    </div>      
+    {% else %}
+      <p>No posts yet.</p>
+    {% endif %}
   </div>
 </section>
 {% endblock %}
