--- a/mysite/blog/templates/base.html
+++ b/mysite/blog/templates/base.html
@@ -28,7 +28,12 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'index' %}">Home</a></li>
-
+            {% if user.is_authenticated %}
+            <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}?next=/blog">Logout</a></li>
+            {% else %}
+            <li class="nav-item"><a class="nav-link" href="{% url 'login' %}?next=/blog">Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'register' %}?next=/blog">Register</a></li>            
+            {% endif %}
         </ul>
     </div>
   </nav>
