--- a/mysite/blog/templates/index.html
+++ b/mysite/blog/templates/index.html
@@ -9,7 +9,7 @@
     <ul class="fa-ul mb-0">
       {% for post in posts %}
         <li class="mt-2">
-          <a href="{{ post.id }}"></a>Post {{post.post_title }}</a> by: {{ post.post_author }}, at {{ post.pub_time}}
+          <a href="{{ post.id }}">Post {{post.post_title }}</a> by: {{ post.post_author }}, at {{ post.pub_time}}
           {% if user.is_authenticated %}
             <a href="{{ post.id }}/delete" class="btn btn-danger btn-sm" tabindex="-1" role="button" aria-disabled="true">Delete post</a>
           {% endif %}
