--- a/mysite/blog/templates/base.html
+++ b/mysite/blog/templates/base.html
@@ -29,6 +29,7 @@
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'index' %}">Home</a></li>
             {% if user.is_authenticated %}
+            <li class="nav-item"><a class="nav-link" href="{% url 'index' %}new/">Publish</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}?next=/blog">Logout</a></li>
             {% else %}
             <li class="nav-item"><a class="nav-link" href="{% url 'login' %}?next=/blog">Login</a></li>
