todo: post edit

--- a/mysite/blog/templates/base.html
+++ b/mysite/blog/templates/base.html
@@ -16,6 +16,8 @@
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="{% static 'style.css' %}" rel="stylesheet" />
+  <!-- TinyMCE -->
+  <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 </head>
 <body>
   <!-- Navigation-->
