--- a/mysite/blog/templates/registration/login.html
+++ b/mysite/blog/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}<title>Blog | Login</title>{% endblock %}
+{% block title %}<title>Blog &bull; Login</title>{% endblock %}
 {% block content %}
 <section class="resume-section" id="login">
   {% if form.errors %}
