--- a/mysite/blog/templates/blogpost_delete.html
+++ b/mysite/blog/templates/blogpost_delete.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% block title %}<title>Blog &bull; Delete Post</title>{% endblock %}
 {% block content %}
 <section class="resume-section" id="skills">
   <div class="resume-section-content">
