--- a/mysite/blog/templates/blogpost_update.html
+++ b/mysite/blog/templates/blogpost_update.html
@@ -1,16 +1,18 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% block title %}<title>Blog &bull; Update Post</title>{% endblock %}
 {% block content %}
 <section class="resume-section" id="skills">
   <div class="resume-section-content">
     <form method="POST" enctype="multipart/form-data">
       {% csrf_token %}
       <fieldset class="form-group">
-          <legend class="border-bottom mb-4">Edit blog post</legend>
+          <legend class="border-bottom mb-4">Edit "{{ post.post_title }}"</legend>
           {{ form|crispy }}
       </fieldset>
       <div class="form-group">
           <button class="btn btn-outline-info" type="submit">Submit</button>
+
       </div>
     </form>
   </div>
