--- a/mysite/blog/templates/index.html
+++ b/mysite/blog/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}<title>Blog &bull; Home Page</title>{% endblock %}
 {% block content %}
 <section class="resume-section" id="skills">
   <div class="resume-section-content">
