--- a/mysite/blog/templates/registration/register.html
+++ b/mysite/blog/templates/registration/register.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}<title>Blog | Register</title>{% endblock %}
+{% block title %}<title>Blog &bull; Register</title>{% endblock %}
 {% block content %}
 <section class="resume-section" id="skills">
   <div class="resume-section-content">
